20130102 - fhabermann
* enable function to enable or disable user
* added delete for user
* added new permissions menu
* login only for active users
* added group handling

20121230 - fhabermann
* enable user listing, add user and edit user

20121227 - fhabermann
* added system settings to layout
* added Knowledgeroot_Page_Default plugin to handle default page

20121226 - fhabermann
* added Knowledgeroot_Content_Parser
* using objects in getContents of Knowledgeroot_Content
* enable getContents with raw content in Knowledgeroot_Content

20121219 - fhabermann
* upgraded to jquery 1.8.3
* upgraded to dojo 1.8.2
* composer update

20121215 - fhabermann
* added check if modules config exists

20121213 - fhabermann
* enabled namespace declaration in modules
* using File objects for listing

20121212 - fhabermann
* bootstrap update to 2.2.2

20121206 - fhabermann
* created abstract class for Knowledgeroot_Rte
* default Knowledgeroot_Rte class using abstrace class
* using new rte commands

20121205 - fhabermann
* fixed problems with mssql dump
* allow DateTime as contructor object for Knowledgeroot_Date
* use Knowledgeroot_Date for datetime from database

20121202 - fhabermann
* optimized bootstrap

20121128 - fhabermann
* added first stuff for modules

20121124 - fhabermann
* added jump to anker on content new/edit or file upload/delete
* added collapse for active content element

20121121 - fhabermann
* fixed date format
* fixed problem with abstract table class for mssql

20121120 - fhabermann
* used non named parameters for sql

20121117 - fhabermann
* fixed upload problem with filemanager
* added xsendfile feature

20121115 - fhabermann
* added upload action
* added layout for files
* more File class action

20121105 - fhabermann
* added download action
* added File class with actions

20121102 - fhabermann
* added bootom bar with version and social links
* added FileManager

20121101 - fhabermann
* bootstrap update to 2.2.1

20121027 - fhabermann
* added mssql dump