@@ -1,0 +1,4 @@
+<br /><br />
+<div id="view-content">
+	<p>View script for controller <b>Permissions</b> and script/action name <b>index</b></p>
+</div>
